- Bug #2292: Fixed the bug that CActiveDataProvider may ignore the specified criteria for the sorting configuration (Qiang)
- Bug #2294: Fixed the bug that duplicated PK columns may appear in the join SQL statement if custom select option is used (Qiang)
- Bug #2303: Fixed not logging anything on WSDL service failure (Sam Dark)
- Enh #2262: Added warning log when a session fails to start by CHttpSession (Qiang)
- Enh #2268: Added CClientScript::getPackageBaseUrl() (Qiang)
- Enh #2273: Used better merging algorithm to build query parameters that are of array type in CUrlManager (Qiang)
- Enh #2299: Added CAssetManager.newFileMode and newDirMode (Qiang)
- Eng #2320: CListView now doesn't register clientscripts if no AJAX is used (Sam Dark)
- Enh #2325: Added $option parameter to CDbCommand::select() to support special SELECT syntax (Qiang)
- Enh: Added CHttpSession::regenerateID() and improved CWebUser::changeIdentity() by regenerating session ID (Qiang)
- Enh: Added CActiveRecord::saveCounters() (Qiang)
- Chg #2261: Upgraded HTMLPurifier to v4.3.0 (Sam Dark)
- Chg #2309: Changed XML mimetype to application/xml for more interoperability (Sam Dark)
- Chg: Upgraded jQuery to 1.5.2 (Qiang)

Version 1.1.7 March 27, 2011
----------------------------
- Bug #1080: Correct recursive merging for CDbCriteria::with (creocoder, Sam Dark)
- Bug #1624: Fixed the bug that Gii would generate only one relation for a parent that has a child with more FK linking to it (mdomba)
- Bug #1809: Fixed the bug that CPgsqlSchema did not detect sequence names correctly in some scenarios (Qiang)
- Bug #1984: Fixed firing event multiple times when using live()/delegate() on AJAXified pages (Ekstazi, Sam Dark)
- Bug #2026: Fixed the bug that migration command does not respect the connectionID property value (Qiang)
- Bug #2032: Fixed the bug that beginCache with renderDynamic was not working if used multiple times (mdomba)